5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1831_1644.log
== TEST (2019-06-13 16:04:22) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(5, dtype=float)

for i in range(size(nota)):
	if(nota[i] >= 5):
		soma= soma +1
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:04:45) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(5, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:06:35) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(5, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if(nota[i] <=5):
		vet[i]= nota[i]
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:07:47) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(5, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if(nota[i] <=5):
		vet[i]= nota[i]
print(vet[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:47) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(vet))
	if(nota[i]<=5):
		vet=nota[i]
print(vet)		
-- ERROR:
File "XXXX", line 5
    vet= zeros(, dtype=float)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:02) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(nota, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(vet))
	if(nota[i]<=5):
		vet=nota[i]
print(vet)		
-- ERROR:
File "XXXX", line 12
    for i in range(size(vet))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:10) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(nota, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(vet)):
	if(nota[i]<=5):
		vet=nota[i]
print(vet)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:42) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(nota, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size():
	if(nota[i]<=5):
	
-- ERROR:
File "XXXX", line 12
    for i in range(size():
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:46) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(nota, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size():
	if(nota[i]<=5):
	
-- ERROR:
File "XXXX", line 12
    for i in range(size():
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:49) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(nota, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:14:59) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:49) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if( nota[i]<=5):
		vet[0]= nota[0]
print(vet)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:34) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if( nota[i]<=5):
		vet= nota[i]
print(vet)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:19:20) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if( nota[i]<=5):
		vet= nota[i]
print(vet)
		


	
-- EXECUTION TIME:
1.11219
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
5
4.5
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
4.5
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
4.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:37) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if( nota[i]<=5):
		vet[i]= nota[i]
print(vet[i])
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:11) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if( nota[i]<=5):
		vet[i]= nota[i]
print(vet)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:20) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if( nota[i]<=5):
		vet= nota[i]
print(vet)
		


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:50) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)
i=0
for i in range(size(nota)):
	if( nota[i]<=5):
		i= i+1
print(i)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:22:17) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0
vet= zeros(1, dtype=float)

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)
i=0
for i in range(size(nota)):
	if( nota[i]<=5):
		i= nota[i]
print(i)


	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:37) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)
i=0
vet= zero(1, dtype=float)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[i]=nota[i]



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:44) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)
i=0
vet= zero(1, dtype=float)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[i]=nota[i]
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:58) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)
i=0
vet= zeros(1, dtype=float)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[i]=nota[i]
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:29:44) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
vet= zeros(1, dtype=float)
	if(nota[i]<=5):
		vet[i]=nota[i]
print(vet)



	
-- ERROR:
File "XXXX", line 13
    vet= zeros(1, dtype=float)
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:24) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if(nota[i]<=5):
		vet= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:48) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if(nota[i]<=5):
		vet= i
print(vet[i])



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:27) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if(nota[i]<=5):
	vet[0]= i
print(vet)



	
-- ERROR:
File "XXXX", line 14
    vet[0]= i
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:33) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:32:56) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(1, dtype=float)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:09) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(1, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:33:17) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(1, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- EXECUTION TIME:
0.956371
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
5
[10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
[4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:34) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(1, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:33:49) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(2, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:34:44) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:34:52) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- EXECUTION TIME:
0.886342
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
5
[10  0  0  0  0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[8 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
[4 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:05) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=float)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:35:22) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet= i
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:36:57) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]=soma
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:37:03) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet[0]=soma
print(vet)



	
-- EXECUTION TIME:
0.86487
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
5
[5 0 0 0 0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[6 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
[4 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:30) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet=soma[i]
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:37:40) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=float)
for i in range(size(nota)):
	if(nota[i]<=5):
		vet=soma[i]
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:30) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
for i in range(size(nota)):	
	if(nota[i]<=5):
		j= i+1
		vet= j
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:41:55) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		j= i +1 
		vet= j+1
		
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:03) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0


for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		j= nota[i] + 1
		vet= j
		
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:04) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
	j= soma[i]	+ 1
		
print(vet)



	
-- ERROR:
File "XXXX", line 15
    j= soma[i]	+ 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:15) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		j= soma[i]	+ 1
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:36) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		j= soma[i]	+ 1
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:53) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		j= soma[i]+ 1
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:18) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:53:27) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- EXECUTION TIME:
0.926123
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
5
[ 0  2  6  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
[0 1 2 4]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:53:52) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:06) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<=5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:54:39) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:48) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] <= 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- EXECUTION TIME:
1.04763
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
5
[ 0  2  8 10  0]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
[0 1 4 0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:54:58) 
-- CODE:
from numpy import*

nota= array(eval(input('notas dos alunos:')))
soma=0

for i in range(size(nota)):
	if(nota[i] < 5):
		soma= soma +1
print(soma)

vet= zeros(soma, dtype=int)
j= 0
for i in range(size(nota)):	
	if(nota[i]<5):
		vet[j]= i
		j= j +1 
print(vet)



	
-- EXECUTION TIME:
1.02778
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
[ 0  2  8 10]
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
[1 2 3 5 6 8]
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
[0 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
